--- a/html mental health/styles.css
+++ b/html mental health/styles.css
@@ -4,7 +4,8 @@ html, body  {
 
 body {
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #6a11cb, #2575fc, #ffcc00);
+   /* background: linear-gradient(135deg, #6a11cb, #2575fc, #ffcc00);*/
+   background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
@@ -88,7 +89,6 @@ a:hover {
 
 .tip {
     position: relative;
-    background-image: url('images/background.png'); /* Změňte cestu podle umístění souboru */
     background-size: cover;
     background-position: center;
     color: white; /* Aby byl text dobře viditelný */
@@ -102,7 +102,7 @@ a:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 0px 10px rgba(239, 235, 235, 0.2);
     transition: transform 0.3s ease-in-out;
     overflow: hidden;
 }
@@ -143,7 +143,7 @@ body {
 
 
   .fire-btn{
-   background-color: #000;
+   background-color: black;
    position: absolute;
    left: 48%;
    top: 99%;
